--- a/style/css/mystyle.css
+++ b/style/css/mystyle.css
@@ -57,7 +57,6 @@ body{
     font-weight: 200;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
 }
 
 .testScroll{
@@ -298,18 +297,62 @@ Carousel
 Containers
 */
 
-.wcMsg{
+.msgCont{
     align-content: center;
     text-align: center;
     font-size: 5vh;
-    height: 20vh;
-    width: 100vw;
+    height: 30vh;
+    width: 100%;
     color: #f1f1f1;
+}
+
+.msgCont .pagination,
+.msgCont .pagination a{
+    font-size: 4vh;
+    color: #f1f1f1 !important;
+    background-color: #171719 !important;
+    border: none;
+    margin-left: 1vw;
+    margin-right: 1vw;
+}
+
+
+.msgCont .pagination li a::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: #f1f1f1;
+    color: white;
+    transition: width 0.4s ease-in-out, left 0.4s ease-in-out;
+}
+
+.msgCont .pagination li a:hover::after {
+    width: 60%;
+    left: 20%;
+    color: white;
+}
+
+.footerCnt{
+    background-color: #2b2b2b;
+    width: 100%;
+    margin-top: 7vh;
+}
+
+.prtCont{
+    display: flex;
+    margin: 0;
+    border: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 /*
 Image divs
  */
+
 .miniGallery .img-thumbnail{
     background-color: #f1f1f1;
     border: 0;
@@ -336,6 +379,18 @@ Image divs
     padding: .5vh;
 }
 
+.prtBanner{
+    height: 100vh;
+    max-width: 100%;
+    background-color: #171719;
+    margin: 0;
+    padding: 0;
+    object-fit: fill;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+
 /*
 Lightbox
 */
@@ -344,7 +399,8 @@ Lightbox
     display: none;
     position: fixed;
     top: 0; left: 0;
-    width: 100%; height: 100%;
+    width: 100%;
+    height: 100%;
     background: rgba(0, 0, 0, 0.8);
     justify-content: center;
     align-items: center;
@@ -357,3 +413,40 @@ Lightbox
     transition: transform 0.2s ease-in-out;
 }
 
+/*
+Portfolio hover
+ */
+.hover-text {
+    gap: 0;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, .9);
+    padding: 0;
+    color: #f1f1f1;
+    opacity: 0;
+    transition: opacity .15s ease-in-out;
+    width: 100%;
+    height: 100%;
+    border: none;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    font-weight: 100;
+    font-size: min(5vh, 5vw);
+}
+
+.prtBanner:hover .hover-text {
+    opacity: 1;
+}
+
+.prtBanner a{
+    margin: 0;
+    padding: 0;
+    gap: 0;
+    border: none;
+}
