--- a/style/css/mystyle.css
+++ b/style/css/mystyle.css
@@ -101,13 +101,30 @@ p{
     transition: opacity 0.3s ease-in-out;
 }
 
-.form-group label,
 .form-group input,
 .form-group select,
 .form-group select option,
 .form-group textarea{
+    color: #f1f1f1;
     font-weight: 200;
     text-transform: uppercase;
+    background-color: #171719;
+}
+
+input:focus, textarea:focus, select:focus {
+    outline: none !important;
+    box-shadow: none !important;
+    border: 1px solid #ccc !important;
+}
+
+.form-group label{
+    color: #f1f1f1;
+    font-weight: 200;
+    text-transform: uppercase;
+}
+
+form{
+    width: 40vw;
 }
 
 /*
@@ -427,6 +444,21 @@ Containers
     bottom: 20%;
     font-weight: bold;
 }
+.formCont{
+    height: 100vh;
+    width: 80vw;
+    margin-right: 10vw;
+    margin-left: 10vw;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+}
+
+.formCont  .inpCont{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+}
 
 /*
 Image divs
@@ -500,6 +532,15 @@ Image divs
     align-content: center;
     justify-content: center;
 }
+
+.formCont .imgCont img{
+    height: 80vh;
+    width: 100%;
+    margin-right: 5vw;
+    object-fit: cover;
+    padding: 0;
+}
+
 
 /*
 Lightbox
