--- a/style/css/mystyle.css
+++ b/style/css/mystyle.css
@@ -382,6 +382,7 @@ Containers
     background-color: #2b2b2b;
     width: 100%;
     margin-top: 7vh;
+    border-top: .1vh solid #f1f1f1;
 }
 
 .prtCont{
